SyntaxAnalyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO declaraciones FIN
Rule 2     declaraciones -> declaraciones declaracion
Rule 3     declaraciones -> declaracion
Rule 4     declaracion -> declaracion_simple
Rule 5     declaracion -> declaracion_con_asignacion
Rule 6     declaracion -> asignacion
Rule 7     declaracion -> constante
Rule 8     declaracion -> sentencia_if
Rule 9     declaracion -> sentencia_mientras
Rule 10    declaracion -> sentencia_para
Rule 11    declaracion -> sentencia_repetir
Rule 12    declaracion -> sentencia_mostrar
Rule 13    declaracion -> empty
Rule 14    empty -> <empty>
Rule 15    sentencia_if -> SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones FIN_SI
Rule 16    sentencia_if -> SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones SINO declaraciones FIN_SI
Rule 17    sentencia_mientras -> MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER HACER declaraciones FIN_MIENTRAS
Rule 18    sentencia_para -> PARA IDENTIFICADOR DESDE expresion HASTA expresion HACER declaraciones FIN_PARA
Rule 19    sentencia_para -> PARA IDENTIFICADOR DESDE expresion HASTA expresion CON_PASO expresion HACER declaraciones FIN_PARA
Rule 20    instrucciones_para -> instruccion_para
Rule 21    instrucciones_para -> instrucciones_para instruccion_para
Rule 22    instruccion_para -> sentencia_mostrar
Rule 23    instruccion_para -> asignacion
Rule 24    instruccion_para -> sentencia_if
Rule 25    instruccion_para -> sentencia_mientras
Rule 26    sentencia_repetir -> REPETIR declaraciones HASTA_QUE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
Rule 27    sentencia_mostrar -> MOSTRAR lista_expresiones PUNTO_COMA
Rule 28    expresion -> LITERAL_ENTERO
Rule 29    expresion -> LITERAL_DECIMAL
Rule 30    expresion -> LITERAL_CADENA
Rule 31    expresion -> LITERAL_BOOLEANO
Rule 32    expresion -> IDENTIFICADOR
Rule 33    expresion -> expresion SUMA expresion
Rule 34    expresion -> expresion RESTA expresion
Rule 35    expresion -> expresion MULTIPLICACION expresion
Rule 36    expresion -> expresion DIVISION expresion
Rule 37    expresion -> expresion AND expresion
Rule 38    expresion -> expresion OR expresion
Rule 39    expresion -> NOT expresion
Rule 40    expresion -> expresion MAYOR_QUE expresion
Rule 41    expresion -> expresion MENOR_QUE expresion
Rule 42    expresion -> expresion MAYOR_IGUAL expresion
Rule 43    expresion -> expresion MENOR_IGUAL expresion
Rule 44    expresion -> expresion IGUAL_IGUAL expresion
Rule 45    expresion -> expresion DIFERENTE expresion
Rule 46    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 47    lista_expresiones -> lista_expresiones COMA expresion
Rule 48    lista_expresiones -> expresion
Rule 49    declaracion_simple -> TIPO IDENTIFICADOR PUNTO_COMA
Rule 50    declaracion_con_asignacion -> TIPO IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
Rule 51    asignacion -> IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
Rule 52    constante -> CONSTANTE IDENTIFICADOR ASIGNACION expresion PUNTO_COMA

Terminals, with rules where they appear

AND                  : 37
ASIGNACION           : 50 51 52
COMA                 : 47
CONSTANTE            : 52
CON_PASO             : 19
DESDE                : 18 19
DIFERENTE            : 45
DIVISION             : 36
ENTONCES             : 15 16
FIN                  : 1
FIN_MIENTRAS         : 17
FIN_PARA             : 18 19
FIN_SI               : 15 16
HACER                : 17 18 19
HASTA                : 18 19
HASTA_QUE            : 26
IDENTIFICADOR        : 18 19 32 49 50 51 52
IGUAL_IGUAL          : 44
INICIO               : 1
LITERAL_BOOLEANO     : 31
LITERAL_CADENA       : 30
LITERAL_DECIMAL      : 29
LITERAL_ENTERO       : 28
MAYOR_IGUAL          : 42
MAYOR_QUE            : 40
MENOR_IGUAL          : 43
MENOR_QUE            : 41
MIENTRAS             : 17
MOSTRAR              : 27
MULTIPLICACION       : 35
NOT                  : 39
OR                   : 38
PARA                 : 18 19
PARENTESIS_DER       : 15 16 17 26 46
PARENTESIS_IZQ       : 15 16 17 26 46
PUNTO_COMA           : 26 27 49 50 51 52
REPETIR              : 26
RESTA                : 34
SI                   : 15 16
SINO                 : 16
SUMA                 : 33
TIPO                 : 49 50
error                : 

Nonterminals, with rules where they appear

asignacion           : 6 23
constante            : 7
declaracion          : 2 3
declaracion_con_asignacion : 5
declaracion_simple   : 4
declaraciones        : 1 2 15 16 16 17 18 19 26
empty                : 13
expresion            : 15 16 17 18 18 19 19 19 26 33 33 34 34 35 35 36 36 37 37 38 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 50 51 52
instruccion_para     : 20 21
instrucciones_para   : 21
lista_expresiones    : 27 47
programa             : 0
sentencia_if         : 8 24
sentencia_mientras   : 9 25
sentencia_mostrar    : 12 22
sentencia_para       : 10
sentencia_repetir    : 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO declaraciones FIN

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . declaraciones FIN
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaracion
    (4) declaracion -> . declaracion_simple
    (5) declaracion -> . declaracion_con_asignacion
    (6) declaracion -> . asignacion
    (7) declaracion -> . constante
    (8) declaracion -> . sentencia_if
    (9) declaracion -> . sentencia_mientras
    (10) declaracion -> . sentencia_para
    (11) declaracion -> . sentencia_repetir
    (12) declaracion -> . sentencia_mostrar
    (13) declaracion -> . empty
    (49) declaracion_simple -> . TIPO IDENTIFICADOR PUNTO_COMA
    (50) declaracion_con_asignacion -> . TIPO IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (51) asignacion -> . IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (52) constante -> . CONSTANTE IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (15) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones FIN_SI
    (16) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones SINO declaraciones FIN_SI
    (17) sentencia_mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER HACER declaraciones FIN_MIENTRAS
    (18) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion HACER declaraciones FIN_PARA
    (19) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion CON_PASO expresion HACER declaraciones FIN_PARA
    (26) sentencia_repetir -> . REPETIR declaraciones HASTA_QUE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (27) sentencia_mostrar -> . MOSTRAR lista_expresiones PUNTO_COMA
    (14) empty -> .

  ! shift/reduce conflict for TIPO resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for CONSTANTE resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for MOSTRAR resolved as shift
    TIPO            shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    CONSTANTE       shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20
    REPETIR         shift and go to state 21
    MOSTRAR         shift and go to state 22
    FIN             reduce using rule 14 (empty -> .)

  ! TIPO            [ reduce using rule 14 (empty -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 14 (empty -> .) ]
  ! CONSTANTE       [ reduce using rule 14 (empty -> .) ]
  ! SI              [ reduce using rule 14 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 14 (empty -> .) ]
  ! PARA            [ reduce using rule 14 (empty -> .) ]
  ! REPETIR         [ reduce using rule 14 (empty -> .) ]
  ! MOSTRAR         [ reduce using rule 14 (empty -> .) ]

    declaraciones                  shift and go to state 3
    declaracion                    shift and go to state 4
    declaracion_simple             shift and go to state 5
    declaracion_con_asignacion     shift and go to state 6
    asignacion                     shift and go to state 7
    constante                      shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_mientras             shift and go to state 10
    sentencia_para                 shift and go to state 11
    sentencia_repetir              shift and go to state 12
    sentencia_mostrar              shift and go to state 13
    empty                          shift and go to state 14

state 3

    (1) programa -> INICIO declaraciones . FIN
    (2) declaraciones -> declaraciones . declaracion
    (4) declaracion -> . declaracion_simple
    (5) declaracion -> . declaracion_con_asignacion
    (6) declaracion -> . asignacion
    (7) declaracion -> . constante
    (8) declaracion -> . sentencia_if
    (9) declaracion -> . sentencia_mientras
    (10) declaracion -> . sentencia_para
    (11) declaracion -> . sentencia_repetir
    (12) declaracion -> . sentencia_mostrar
    (13) declaracion -> . empty
    (49) declaracion_simple -> . TIPO IDENTIFICADOR PUNTO_COMA
    (50) declaracion_con_asignacion -> . TIPO IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (51) asignacion -> . IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (52) constante -> . CONSTANTE IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (15) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones FIN_SI
    (16) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones SINO declaraciones FIN_SI
    (17) sentencia_mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER HACER declaraciones FIN_MIENTRAS
    (18) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion HACER declaraciones FIN_PARA
    (19) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion CON_PASO expresion HACER declaraciones FIN_PARA
    (26) sentencia_repetir -> . REPETIR declaraciones HASTA_QUE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (27) sentencia_mostrar -> . MOSTRAR lista_expresiones PUNTO_COMA
    (14) empty -> .

  ! shift/reduce conflict for FIN resolved as shift
  ! shift/reduce conflict for TIPO resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for CONSTANTE resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for MOSTRAR resolved as shift
    FIN             shift and go to state 23
    TIPO            shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    CONSTANTE       shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20
    REPETIR         shift and go to state 21
    MOSTRAR         shift and go to state 22

  ! FIN             [ reduce using rule 14 (empty -> .) ]
  ! TIPO            [ reduce using rule 14 (empty -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 14 (empty -> .) ]
  ! CONSTANTE       [ reduce using rule 14 (empty -> .) ]
  ! SI              [ reduce using rule 14 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 14 (empty -> .) ]
  ! PARA            [ reduce using rule 14 (empty -> .) ]
  ! REPETIR         [ reduce using rule 14 (empty -> .) ]
  ! MOSTRAR         [ reduce using rule 14 (empty -> .) ]

    declaracion                    shift and go to state 24
    declaracion_simple             shift and go to state 5
    declaracion_con_asignacion     shift and go to state 6
    asignacion                     shift and go to state 7
    constante                      shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_mientras             shift and go to state 10
    sentencia_para                 shift and go to state 11
    sentencia_repetir              shift and go to state 12
    sentencia_mostrar              shift and go to state 13
    empty                          shift and go to state 14

state 4

    (3) declaraciones -> declaracion .

    FIN             reduce using rule 3 (declaraciones -> declaracion .)
    TIPO            reduce using rule 3 (declaraciones -> declaracion .)
    IDENTIFICADOR   reduce using rule 3 (declaraciones -> declaracion .)
    CONSTANTE       reduce using rule 3 (declaraciones -> declaracion .)
    SI              reduce using rule 3 (declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 3 (declaraciones -> declaracion .)
    PARA            reduce using rule 3 (declaraciones -> declaracion .)
    REPETIR         reduce using rule 3 (declaraciones -> declaracion .)
    MOSTRAR         reduce using rule 3 (declaraciones -> declaracion .)
    HASTA_QUE       reduce using rule 3 (declaraciones -> declaracion .)
    FIN_SI          reduce using rule 3 (declaraciones -> declaracion .)
    SINO            reduce using rule 3 (declaraciones -> declaracion .)
    FIN_MIENTRAS    reduce using rule 3 (declaraciones -> declaracion .)
    FIN_PARA        reduce using rule 3 (declaraciones -> declaracion .)


state 5

    (4) declaracion -> declaracion_simple .

    FIN             reduce using rule 4 (declaracion -> declaracion_simple .)
    TIPO            reduce using rule 4 (declaracion -> declaracion_simple .)
    IDENTIFICADOR   reduce using rule 4 (declaracion -> declaracion_simple .)
    CONSTANTE       reduce using rule 4 (declaracion -> declaracion_simple .)
    SI              reduce using rule 4 (declaracion -> declaracion_simple .)
    MIENTRAS        reduce using rule 4 (declaracion -> declaracion_simple .)
    PARA            reduce using rule 4 (declaracion -> declaracion_simple .)
    REPETIR         reduce using rule 4 (declaracion -> declaracion_simple .)
    MOSTRAR         reduce using rule 4 (declaracion -> declaracion_simple .)
    HASTA_QUE       reduce using rule 4 (declaracion -> declaracion_simple .)
    FIN_SI          reduce using rule 4 (declaracion -> declaracion_simple .)
    SINO            reduce using rule 4 (declaracion -> declaracion_simple .)
    FIN_MIENTRAS    reduce using rule 4 (declaracion -> declaracion_simple .)
    FIN_PARA        reduce using rule 4 (declaracion -> declaracion_simple .)


state 6

    (5) declaracion -> declaracion_con_asignacion .

    FIN             reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    TIPO            reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    IDENTIFICADOR   reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    CONSTANTE       reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    SI              reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    MIENTRAS        reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    PARA            reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    REPETIR         reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    MOSTRAR         reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    HASTA_QUE       reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    FIN_SI          reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    SINO            reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    FIN_MIENTRAS    reduce using rule 5 (declaracion -> declaracion_con_asignacion .)
    FIN_PARA        reduce using rule 5 (declaracion -> declaracion_con_asignacion .)


state 7

    (6) declaracion -> asignacion .

    FIN             reduce using rule 6 (declaracion -> asignacion .)
    TIPO            reduce using rule 6 (declaracion -> asignacion .)
    IDENTIFICADOR   reduce using rule 6 (declaracion -> asignacion .)
    CONSTANTE       reduce using rule 6 (declaracion -> asignacion .)
    SI              reduce using rule 6 (declaracion -> asignacion .)
    MIENTRAS        reduce using rule 6 (declaracion -> asignacion .)
    PARA            reduce using rule 6 (declaracion -> asignacion .)
    REPETIR         reduce using rule 6 (declaracion -> asignacion .)
    MOSTRAR         reduce using rule 6 (declaracion -> asignacion .)
    HASTA_QUE       reduce using rule 6 (declaracion -> asignacion .)
    FIN_SI          reduce using rule 6 (declaracion -> asignacion .)
    SINO            reduce using rule 6 (declaracion -> asignacion .)
    FIN_MIENTRAS    reduce using rule 6 (declaracion -> asignacion .)
    FIN_PARA        reduce using rule 6 (declaracion -> asignacion .)


state 8

    (7) declaracion -> constante .

    FIN             reduce using rule 7 (declaracion -> constante .)
    TIPO            reduce using rule 7 (declaracion -> constante .)
    IDENTIFICADOR   reduce using rule 7 (declaracion -> constante .)
    CONSTANTE       reduce using rule 7 (declaracion -> constante .)
    SI              reduce using rule 7 (declaracion -> constante .)
    MIENTRAS        reduce using rule 7 (declaracion -> constante .)
    PARA            reduce using rule 7 (declaracion -> constante .)
    REPETIR         reduce using rule 7 (declaracion -> constante .)
    MOSTRAR         reduce using rule 7 (declaracion -> constante .)
    HASTA_QUE       reduce using rule 7 (declaracion -> constante .)
    FIN_SI          reduce using rule 7 (declaracion -> constante .)
    SINO            reduce using rule 7 (declaracion -> constante .)
    FIN_MIENTRAS    reduce using rule 7 (declaracion -> constante .)
    FIN_PARA        reduce using rule 7 (declaracion -> constante .)


state 9

    (8) declaracion -> sentencia_if .

    FIN             reduce using rule 8 (declaracion -> sentencia_if .)
    TIPO            reduce using rule 8 (declaracion -> sentencia_if .)
    IDENTIFICADOR   reduce using rule 8 (declaracion -> sentencia_if .)
    CONSTANTE       reduce using rule 8 (declaracion -> sentencia_if .)
    SI              reduce using rule 8 (declaracion -> sentencia_if .)
    MIENTRAS        reduce using rule 8 (declaracion -> sentencia_if .)
    PARA            reduce using rule 8 (declaracion -> sentencia_if .)
    REPETIR         reduce using rule 8 (declaracion -> sentencia_if .)
    MOSTRAR         reduce using rule 8 (declaracion -> sentencia_if .)
    HASTA_QUE       reduce using rule 8 (declaracion -> sentencia_if .)
    FIN_SI          reduce using rule 8 (declaracion -> sentencia_if .)
    SINO            reduce using rule 8 (declaracion -> sentencia_if .)
    FIN_MIENTRAS    reduce using rule 8 (declaracion -> sentencia_if .)
    FIN_PARA        reduce using rule 8 (declaracion -> sentencia_if .)


state 10

    (9) declaracion -> sentencia_mientras .

    FIN             reduce using rule 9 (declaracion -> sentencia_mientras .)
    TIPO            reduce using rule 9 (declaracion -> sentencia_mientras .)
    IDENTIFICADOR   reduce using rule 9 (declaracion -> sentencia_mientras .)
    CONSTANTE       reduce using rule 9 (declaracion -> sentencia_mientras .)
    SI              reduce using rule 9 (declaracion -> sentencia_mientras .)
    MIENTRAS        reduce using rule 9 (declaracion -> sentencia_mientras .)
    PARA            reduce using rule 9 (declaracion -> sentencia_mientras .)
    REPETIR         reduce using rule 9 (declaracion -> sentencia_mientras .)
    MOSTRAR         reduce using rule 9 (declaracion -> sentencia_mientras .)
    HASTA_QUE       reduce using rule 9 (declaracion -> sentencia_mientras .)
    FIN_SI          reduce using rule 9 (declaracion -> sentencia_mientras .)
    SINO            reduce using rule 9 (declaracion -> sentencia_mientras .)
    FIN_MIENTRAS    reduce using rule 9 (declaracion -> sentencia_mientras .)
    FIN_PARA        reduce using rule 9 (declaracion -> sentencia_mientras .)


state 11

    (10) declaracion -> sentencia_para .

    FIN             reduce using rule 10 (declaracion -> sentencia_para .)
    TIPO            reduce using rule 10 (declaracion -> sentencia_para .)
    IDENTIFICADOR   reduce using rule 10 (declaracion -> sentencia_para .)
    CONSTANTE       reduce using rule 10 (declaracion -> sentencia_para .)
    SI              reduce using rule 10 (declaracion -> sentencia_para .)
    MIENTRAS        reduce using rule 10 (declaracion -> sentencia_para .)
    PARA            reduce using rule 10 (declaracion -> sentencia_para .)
    REPETIR         reduce using rule 10 (declaracion -> sentencia_para .)
    MOSTRAR         reduce using rule 10 (declaracion -> sentencia_para .)
    HASTA_QUE       reduce using rule 10 (declaracion -> sentencia_para .)
    FIN_SI          reduce using rule 10 (declaracion -> sentencia_para .)
    SINO            reduce using rule 10 (declaracion -> sentencia_para .)
    FIN_MIENTRAS    reduce using rule 10 (declaracion -> sentencia_para .)
    FIN_PARA        reduce using rule 10 (declaracion -> sentencia_para .)


state 12

    (11) declaracion -> sentencia_repetir .

    FIN             reduce using rule 11 (declaracion -> sentencia_repetir .)
    TIPO            reduce using rule 11 (declaracion -> sentencia_repetir .)
    IDENTIFICADOR   reduce using rule 11 (declaracion -> sentencia_repetir .)
    CONSTANTE       reduce using rule 11 (declaracion -> sentencia_repetir .)
    SI              reduce using rule 11 (declaracion -> sentencia_repetir .)
    MIENTRAS        reduce using rule 11 (declaracion -> sentencia_repetir .)
    PARA            reduce using rule 11 (declaracion -> sentencia_repetir .)
    REPETIR         reduce using rule 11 (declaracion -> sentencia_repetir .)
    MOSTRAR         reduce using rule 11 (declaracion -> sentencia_repetir .)
    HASTA_QUE       reduce using rule 11 (declaracion -> sentencia_repetir .)
    FIN_SI          reduce using rule 11 (declaracion -> sentencia_repetir .)
    SINO            reduce using rule 11 (declaracion -> sentencia_repetir .)
    FIN_MIENTRAS    reduce using rule 11 (declaracion -> sentencia_repetir .)
    FIN_PARA        reduce using rule 11 (declaracion -> sentencia_repetir .)


state 13

    (12) declaracion -> sentencia_mostrar .

    FIN             reduce using rule 12 (declaracion -> sentencia_mostrar .)
    TIPO            reduce using rule 12 (declaracion -> sentencia_mostrar .)
    IDENTIFICADOR   reduce using rule 12 (declaracion -> sentencia_mostrar .)
    CONSTANTE       reduce using rule 12 (declaracion -> sentencia_mostrar .)
    SI              reduce using rule 12 (declaracion -> sentencia_mostrar .)
    MIENTRAS        reduce using rule 12 (declaracion -> sentencia_mostrar .)
    PARA            reduce using rule 12 (declaracion -> sentencia_mostrar .)
    REPETIR         reduce using rule 12 (declaracion -> sentencia_mostrar .)
    MOSTRAR         reduce using rule 12 (declaracion -> sentencia_mostrar .)
    HASTA_QUE       reduce using rule 12 (declaracion -> sentencia_mostrar .)
    FIN_SI          reduce using rule 12 (declaracion -> sentencia_mostrar .)
    SINO            reduce using rule 12 (declaracion -> sentencia_mostrar .)
    FIN_MIENTRAS    reduce using rule 12 (declaracion -> sentencia_mostrar .)
    FIN_PARA        reduce using rule 12 (declaracion -> sentencia_mostrar .)


state 14

    (13) declaracion -> empty .

    FIN             reduce using rule 13 (declaracion -> empty .)
    TIPO            reduce using rule 13 (declaracion -> empty .)
    IDENTIFICADOR   reduce using rule 13 (declaracion -> empty .)
    CONSTANTE       reduce using rule 13 (declaracion -> empty .)
    SI              reduce using rule 13 (declaracion -> empty .)
    MIENTRAS        reduce using rule 13 (declaracion -> empty .)
    PARA            reduce using rule 13 (declaracion -> empty .)
    REPETIR         reduce using rule 13 (declaracion -> empty .)
    MOSTRAR         reduce using rule 13 (declaracion -> empty .)
    HASTA_QUE       reduce using rule 13 (declaracion -> empty .)
    FIN_SI          reduce using rule 13 (declaracion -> empty .)
    SINO            reduce using rule 13 (declaracion -> empty .)
    FIN_MIENTRAS    reduce using rule 13 (declaracion -> empty .)
    FIN_PARA        reduce using rule 13 (declaracion -> empty .)


state 15

    (49) declaracion_simple -> TIPO . IDENTIFICADOR PUNTO_COMA
    (50) declaracion_con_asignacion -> TIPO . IDENTIFICADOR ASIGNACION expresion PUNTO_COMA

    IDENTIFICADOR   shift and go to state 25


state 16

    (51) asignacion -> IDENTIFICADOR . ASIGNACION expresion PUNTO_COMA

    ASIGNACION      shift and go to state 26


state 17

    (52) constante -> CONSTANTE . IDENTIFICADOR ASIGNACION expresion PUNTO_COMA

    IDENTIFICADOR   shift and go to state 27


state 18

    (15) sentencia_if -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones FIN_SI
    (16) sentencia_if -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones SINO declaraciones FIN_SI

    PARENTESIS_IZQ  shift and go to state 28


state 19

    (17) sentencia_mientras -> MIENTRAS . PARENTESIS_IZQ expresion PARENTESIS_DER HACER declaraciones FIN_MIENTRAS

    PARENTESIS_IZQ  shift and go to state 29


state 20

    (18) sentencia_para -> PARA . IDENTIFICADOR DESDE expresion HASTA expresion HACER declaraciones FIN_PARA
    (19) sentencia_para -> PARA . IDENTIFICADOR DESDE expresion HASTA expresion CON_PASO expresion HACER declaraciones FIN_PARA

    IDENTIFICADOR   shift and go to state 30


state 21

    (26) sentencia_repetir -> REPETIR . declaraciones HASTA_QUE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaracion
    (4) declaracion -> . declaracion_simple
    (5) declaracion -> . declaracion_con_asignacion
    (6) declaracion -> . asignacion
    (7) declaracion -> . constante
    (8) declaracion -> . sentencia_if
    (9) declaracion -> . sentencia_mientras
    (10) declaracion -> . sentencia_para
    (11) declaracion -> . sentencia_repetir
    (12) declaracion -> . sentencia_mostrar
    (13) declaracion -> . empty
    (49) declaracion_simple -> . TIPO IDENTIFICADOR PUNTO_COMA
    (50) declaracion_con_asignacion -> . TIPO IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (51) asignacion -> . IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (52) constante -> . CONSTANTE IDENTIFICADOR ASIGNACION expresion PUNTO_COMA
    (15) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones FIN_SI
    (16) sentencia_if -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER ENTONCES declaraciones SINO declaraciones FIN_SI
    (17) sentencia_mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER HACER declaraciones FIN_MIENTRAS
    (18) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion HACER declaraciones FIN_PARA
    (19) sentencia_para -> . PARA IDENTIFICADOR DESDE expresion HASTA expresion CON_PASO expresion HACER declaraciones FIN_PARA
    (26) sentencia_repetir -> . REPETIR declaraciones HASTA_QUE PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (27) sentencia_mostrar -> . MOSTRAR lista_expresiones PUNTO_COMA
    (14) empty -> .

  ! shift/reduce conflict for TIPO resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for CONSTANTE resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for MOSTRAR resolved as shift
    TIPO            shift and go to state 15
    IDENTIFICADOR   shift and go to state 16
    CONSTANTE       shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20
    REPETIR         shift and go to state 21
    MOSTRAR         shift and go to state 22
    HASTA_QUE       reduce using rule 14 (empty -> .)

  ! TIPO            [ reduce using rule 14 (empty -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 14 (empty -> .) ]
  ! CONSTANTE       [ reduce using rule 14 (empty -> .) ]
  ! SI              [ reduce using rule 14 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 14 (empty -> .) ]
  ! PARA            [ reduce using rule 14 (empty -> .) ]
  ! REPETIR         [ reduce using rule 14 (empty -> .) ]
  ! MOSTRAR         [ reduce using rule 14 (empty -> .) ]

    declaraciones                  shift and go to state 31
    declaracion                    shift and go to state 4
    declaracion_simple             shift and go to state 5
    declaracion_con_asignacion     shift and go to state 6
    asignacion                     shift and go to state 7
    constante                      shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_mientras             shift and go to state 10
    sentencia_para                 shift and go to state 11
    sentencia_repetir              shift and go to state 12
    sentencia_mostrar              shift and go to state 13
    empty                          shift and go to state 14

state 22

    (27) sentencia_mostrar -> MOSTRAR . lista_expresiones PUNTO_COMA
    (47) lista_expresiones -> . lista_expresiones COMA expresion
    (48) lista_expresiones -> . expresion
    (28) expresion -> . LITERAL_ENTERO
    (29) expresion -> . LITERAL_DECIMAL
    (30) expresion -> . LITERAL_CADENA
    (31) expresion -> . LITERAL_BOOLEANO
    (32) expresion -> . IDENTIFICADOR
    (33) expresion -> . expresion SUMA expresion
    (34) expresion -> . expresion RESTA expresion
    (35) expresion -> . expresion MULTIPLICACION expresion
    (36) expresion -> . expresion DIVISION expresion
    (37) expresion -> . expresion AND expresion
    (38) expresion -> . expresion OR expresion
    (39) expresion -> . NOT expresion
    (40) expresion -> . expresion MAYOR_QUE expresion
    (41) expresion -> . expresion MENOR_QUE expresion
    (42) expresion -> . expresion MAYOR_IGUAL expresion
    (43) expresion -> . expresion MENOR_IGUAL expresion
    (44) expresion -> . expresion IGUAL_IGUAL expresion
    (45) expresion -> . expresion DIFERENTE expresion
    (46) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER

    LITERAL_ENTERO  shift and go to state 34
    LITERAL_DECIMAL shift and go to state 35
    LITERAL_CADENA  shift and go to state 36
    LITERAL_BOOLEANO shift and go to state 37
    IDENTIFICADOR   shift and go to state 38
    NOT             shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40

    lista_expresiones              shift and go to state 32
    expresion                      shift and go to state 33

state 23

    (1) programa -> INICIO declaraciones FIN .

    $end            reduce using rule 1 (programa -> INICIO declaraciones FIN .)


state 24

    (2) declaraciones -> declaraciones declaracion .
